--- a/index.html
+++ b/index.html
@@ -1,88 +1,80 @@
 <!DOCTYPE html>
-<html lang="vi">
-
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lê Quang Hoàng / Software Engineer</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Lê Quang Hoàng Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="script.js" defer></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
-
 <body>
   <header>
-    <div class="logo">Lê Quang Hoàng / Software Engineer</div>
+    <h1>Lê Quang Hoàng / Software Engineer</h1>
     <nav>
-      <ul>
-        <li><a href="#intro">Intro</a></li>
-        <li><a href="#about">About Me</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#blog">Blog</a></li>
-      </ul>
+      <a href="#about">ABOUT ME</a>
+      <a href="#projects">PROJECTS</a>
+      <a href="#contact">CONTACT</a>
+      <a href="#blog">BLOG</a>
     </nav>
   </header>
 
-  <main>
-    <section id="intro" class="active fade-section">
-      <div class="card">
-        <img src="avatarr.jpg" alt="Avatar" />
-        <h2>Lê Quang Hoàng</h2>
-        <p>Software Engineering</p>
-        <div class="social-icons">
-          <a href="https://facebook.com/lqhoang1001" target="_blank"><i class="fab fa-facebook"></i></a>
-          <a href="https://zalo.me/0703026269" target="_blank"><i class="fab fa-facebook-messenger"></i></a>
-          <a href="https://instagram.com/_lqhoang_" target="_blank"><i class="fab fa-instagram"></i></a>
-          <a href="mailto:lequanghoang1001@gmail.com"><i class="fas fa-envelope"></i></a>
-        </div>
+  <section id="intro" class="active">
+    <div class="card">
+      <img src="avatarr.jpg" alt="Avatar">
+      <h2>Lê Quang Hoàng</h2>
+      <p>Software Engineering</p>
+      <div class="social-icons">
+        <a href="https://www.facebook.com/lqhoang1001/" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a href="https://zalo.me/0703026269" target="_blank"><i class="fab fa-facebook-messenger"></i></a>
+        <a href="https://www.instagram.com/_lqhoang_/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="mailto:lequanghoang1001@gmail.com"><i class="fas fa-envelope"></i></a>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section id="about" class="fade-section">
-      <div class="content">
-        <h2>About Me</h2>
-        <p>Mình là sinh viên ngành Kỹ thuật phần mềm, đam mê lập trình, thích học hỏi và mong muốn phát triển các dự án cá nhân.</p>
+  <section id="about">
+    <div class="card white-box">
+      <p>Hello<br>
+      I'm a Capricorn — ambitious, disciplined, and goal-oriented...</p>
+      <p><strong>Full Name:</strong> Le Quang Hoang<br>
+      <strong>Birthday:</strong> 10/01/2001<br>
+      <strong>University:</strong> Hoa Sen University - Software Engineering<br>
+      <strong>Hobbies:</strong> Cheerleading, Fashion, Web Programming, Café hopping with friends</p>
+      <p><strong>Objective:</strong> To obtain a position as a web developer...<br>
+      <strong>Education:</strong> Bachelor of Software Engineering, Hoa Sen University.<br>
+      <strong>Languages:</strong> English (Intermediate), Vietnamese (Native).<br>
+      <strong>Skills:</strong> HTML, CSS, JavaScript, C/C++, GitHub, UI/UX basics.<br>
+      <strong>Achievements:</strong> IELTS 5.0, Typing speed 80 WPM.</p>
+    </div>
+  </section>
+
+  <section id="projects">
+    <div class="card white-box">
+      <p>Hiện tại chưa có dự án nào, đang trong quá trình phát triển cá nhân.</p>
+    </div>
+  </section>
+
+  <section id="contact">
+    <div class="card white-box">
+      <p>Bạn có thể liên hệ tôi qua các nền tảng ở trang Intro hoặc email: <a href="mailto:lequanghoang1001@gmail.com">lequanghoang1001@gmail.com</a></p>
+    </div>
+  </section>
+
+  <section id="blog">
+    <div class="card white-box blog-scroll">
+      <h2>Blog</h2>
+      p>Xin chào, tôi là Lê Quang Hoàng – Chàng Ma Kết sống hết mình</p>
+        <p>Chào bạn, cảm ơn vì đã ghé thăm góc nhỏ của tôi trên internet. Tôi là Lê Quang Hoàng, một chàng trai Ma Kết sinh ngày 10/01/2001, mang trong mình tinh thần thẳng thắn, yêu chất lượng hơn số lượng và luôn tìm kiếm niềm vui trong những điều giản dị nhất.</p>
+        <p><strong>Một chút về tôi và những điều tôi yêu thích</strong><br>Tôi là một người yêu tự do, thích tận hưởng cuộc sống theo cách của riêng mình. Những buổi chiều một mình ngồi cà phê, tai đeo headphone với playlist nhạc yêu thích, hay đi dạo phố phường ngắm nhìn dòng người qua lại luôn làm tôi cảm thấy yên bình. Nhưng tôi cũng rất hưởng thụ những khoảnh khắc tụ tập đánh bida, xem phim hay đi cà phê cùng hội bạn thân. Một điều thú vị về tôi: tôi ghét đồ ngọt. Đừng mời tôi ăn bánh kem, nhưng cứ đưa tôi một ly cà phê đen đá là tôi hài lòng ngay.</p>
+        <p><strong>Đam mê lớn nhất của tôi là tập thể thao</strong>, đặc biệt là bộ môn Cheerleading. Cảm giác được nhảy, biểu diễn và truyền năng lượng tích cực đến mọi người thật sự khiến tôi sống đúng với chính mình. Tôi cũng yêu thích chơi game – những giờ phút chiến đấu trong thế giới ảo là cách để tôi xả stress hiệu quả.</p>
+        <p><strong>Hành trình công việc và đam mê</strong><br>Hiện tại, tôi đang làm việc tại Prudential, nơi tôi học được cách tư duy logic và giao tiếp thẳng thắn – điều mà một Ma Kết như tôi rất trân trọng. Ngoài ra, tôi còn dạy nhảy flashmob và cheerleading, nơi tôi được sống với đam mê: truyền cảm hứng qua những động tác nhảy đầy năng lượng. Tôi cũng làm thêm một số công việc online để thử thách bản thân và mở rộng trải nghiệm.</p>
+        <p>Tôi luôn đặt chất lượng lên hàng đầu, dù là trong công việc hay giao tiếp. Thẳng thắn là nguyên tắc của tôi – tôi thích nói những gì mình nghĩ, không vòng vo, nhưng luôn tôn trọng cảm xúc của người khác. Có lẽ vì thế mà tôi không giỏi nói lời ngọt ngào, đặc biệt trong tình cảm. Nhưng khi gặp đúng người, tôi sẽ dành tất cả sự chân thành và yêu thương, dù có thể không biết cách thể hiện bằng lời.</p>
+        <p><strong>Những khoảnh khắc đáng nhớ</strong><br>Tôi là một người tiết kiệm, luôn cân nhắc kỹ trước khi chi tiêu. Nhưng có một ngoại lệ: du lịch. Chỉ cần được đi cùng gia đình hoặc người yêu, tôi sẽ tận hưởng hết mức. Một kỷ niệm đáng nhớ là chuyến đi Đà Lạt cùng gia đình – những khoảnh khắc cười đùa, ăn uống và ngắm cảnh bên nhau khiến tôi nhận ra rằng hạnh phúc đôi khi chỉ đơn giản là được ở bên những người mình yêu thương.</p>
+        <p><strong>Triết lý sống của tôi</strong><br> Tôi sống với sự kỷ luật và trách nhiệm cao. Tôi tin rằng thành công không đến từ may mắn, mà là từ sự kiên trì và nỗ lực không ngừng. Tôi luôn đặt ra mục tiêu rõ ràng, dù lớn hay nhỏ, và từng bước thực hiện chúng. Tôi cũng trân trọng những người bạn ít nhưng chân thành. Trong tình yêu, tôi tìm kiếm sự ổn định và lâu dài, nơi cả hai cùng xây dựng một tương lai vững chắc.</p>
+        <p>Một bài học lớn mà tôi rút ra từ hành trình của mình là: hãy chấp nhận những điều không hoàn hảo. Là một Ma Kết, tôi từng ám ảnh về sự hoàn hảo, nhưng dần dần, tôi học được cách buông bỏ áp lực và tận hưởng hành trình. Cuộc sống không phải lúc nào cũng suôn sẻ, nhưng chính những thử thách đã làm tôi mạnh mẽ hơn.</p>
+        <p><strong>Lời kết</strong><br>Cảm ơn bạn đã dành thời gian để tìm hiểu về tôi qua bài blog này. Nếu bạn cũng yêu thích nhảy, chơi game, hay muốn chia sẻ một câu chuyện thú vị, hãy để lại một bình luận nhé. Hãy sống hết mình, yêu thương thật nhiều, và đừng quên rằng mỗi ngày đều là một cơ hội để tạo nên những khoảnh khắc đáng nhớ.</p>
       </div>
-    </section>
-
-    <section id="projects" class="fade-section">
-      <div class="content">
-        <h2>Projects</h2>
-        <p>Chưa có dự án cụ thể. Nếu bạn muốn góp ý hoặc hướng dẫn mình nên làm gì, rất hoan nghênh!</p>
-      </div>
-    </section>
-
-    <section id="contact" class="fade-section">
-      <div class="content">
-        <h2>Contact</h2>
-        <p>Email: lequanghoang1001@gmail.com</p>
-        <p>Zalo: 0703026269</p>
-      </div>
-    </section>
-
-    <section id="blog" class="fade-section">
-      <div class="content">
-        <h2>Blog</h2>
-        <p>Sắp có bài viết chia sẻ về quá trình học lập trình, cheerleading và cuộc sống sinh viên tại HSU.</p>
-      </div>
-    </section>
-  </main>
-
-  <script>
-    const navLinks = document.querySelectorAll("nav a");
-    const sections = document.querySelectorAll(".fade-section");
-
-    navLinks.forEach(link => {
-      link.addEventListener("click", e => {
-        e.preventDefault();
-        const targetId = link.getAttribute("href").substring(1);
-        sections.forEach(section => {
-          section.classList.remove("active");
-        });
-        document.getElementById(targetId).classList.add("active");
-      });
-    });
-  </script>
+  </section>
 </body>
-
 </html>
