--- a/index.html
+++ b/index.html
@@ -1,70 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lê Quang Hoàng Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="script.js" defer></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: #fff;
+      color: #000;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+    header {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 40px;
+      border-bottom: 1px solid #ddd;
+    }
+    header h1 {
+      font-family: 'Roboto Slab', serif;
+      font-size: 24px;
+    }
+    nav a {
+      margin-left: 20px;
+      text-decoration: none;
+      color: #000;
+      font-weight: 600;
+      cursor: pointer;
+    }
+    .main {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 60px 20px;
+      background: linear-gradient(to right, #f8f3ef 50%, #ffffff 50%);
+      width: 100%;
+      flex: 1;
+      overflow-y: auto;
+    }
+    .main > .container {
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      max-width: 1200px;
+      width: 100%;
+    }
+    .card {
+      background: #f1e7dc;
+      border-radius: 20px;
+      padding: 40px;
+      width: 350px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      text-align: center;
+      border: 2px solid #fff;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 2;
+    }
+    .card img {
+      width: 180px;
+      height: 180px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 20px;
+    }
+    .card h2 {
+      font-size: 22px;
+      font-family: 'Roboto Slab', serif;
+      margin-bottom: 5px;
+    }
+    .card p {
+      font-size: 14px;
+      margin-bottom: 15px;
+    }
+    .card .social {
+      margin-top: 10px;
+    }
+    .card .social a {
+      margin: 0 8px;
+      color: #000;
+      font-size: 18px;
+      transition: color 0.3s;
+    }
+    .card .social a[href*="facebook"] { color: #1877f2; }
+    .card .social a[href*="instagram"] { color: #e4405f; }
+    .card .social a[href*="zalo"] { color: #0068ff; }
+    .card .social a[href*="mailto"] { color: #dd4b39; }
+    
+
+    .intro, .blog {
+      background: #fff;
+      border-radius: 20px;
+      padding: 40px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      border: 2px solid #ccc;
+      max-width: 700px;
+      max-height: 80vh;
+      overflow-y: auto;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) scale(0.95);
+      opacity: 0;
+      pointer-events: none;
+      transition: all 0.8s ease-in-out;
+      z-index: 1;
+    }
+    .intro.show, .blog.show {
+      opacity: 1;
+      transform: translate(-50%, -50%) scale(1);
+      pointer-events: auto;
+      z-index: 3;
+    }
+    .intro h1, .blog h2 {
+      font-family: 'Roboto Slab', serif;
+      font-size: 32px;
+      margin-bottom: 20px;
+    }
+    .intro p, .blog p {
+      font-size: 16px;
+      line-height: 1.8;
+      margin-bottom: 20px;
+    }
+    .blog::-webkit-scrollbar {
+      width: 6px;
+    }
+    .blog::-webkit-scrollbar-thumb {
+      background-color: #ccc;
+      border-radius: 6px;
+    }
+    #resumeInfo {
+      font-size: 16px;
+      line-height: 1.8;
+    }
+  </style>
 </head>
 <body>
   <header>
     <h1>Lê Quang Hoàng / Software Engineer</h1>
     <nav>
-      <a href="#about">ABOUT ME</a>
+      <a id="toggleIntro">ABOUT ME</a>
       <a href="#projects">PROJECTS</a>
       <a href="#contact">CONTACT</a>
-      <a href="#blog">BLOG</a>
+      <a id="toggleBlog">BLOG</a>
     </nav>
   </header>
-
-  <section id="intro" class="active">
-    <div class="card">
-      <img src="avatarr.jpg" alt="Avatar">
-      <h2>Lê Quang Hoàng</h2>
-      <p>Software Engineering</p>
-      <div class="social-icons">
-        <a href="https://www.facebook.com/lqhoang1001/" target="_blank"><i class="fab fa-facebook"></i></a>
-        <a href="https://zalo.me/0703026269" target="_blank"><i class="fab fa-facebook-messenger"></i></a>
-        <a href="https://www.instagram.com/_lqhoang_/" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="mailto:lequanghoang1001@gmail.com"><i class="fas fa-envelope"></i></a>
+  <div class="main">
+    <div class="container">
+      <div class="card" id="profileCard">
+        <img src="avatarr.jpg" alt="Hoang">
+        <h2>Lê Quang Hoàng</h2>
+        <p>Software Engineering</p>
+        <div class="social">
+          <a href="https://www.facebook.com/lqhoang1001/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/_lqhoang_/" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://zalo.me/0703026269" target="_blank"><i class="fas fa-comment-dots"></i></a>
+          <a href="mailto:lequanghoang1001@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+        </div>
       </div>
-    </div>
-  </section>
-
-  <section id="about">
-    <div class="card white-box">
-      <p>Hello<br>
-      I'm a Capricorn — ambitious, disciplined, and goal-oriented...</p>
-      <p><strong>Full Name:</strong> Le Quang Hoang<br>
-      <strong>Birthday:</strong> 10/01/2001<br>
-      <strong>University:</strong> Hoa Sen University - Software Engineering<br>
-      <strong>Hobbies:</strong> Cheerleading, Fashion, Web Programming, Café hopping with friends</p>
-      <p><strong>Objective:</strong> To obtain a position as a web developer...<br>
-      <strong>Education:</strong> Bachelor of Software Engineering, Hoa Sen University.<br>
-      <strong>Languages:</strong> English (Intermediate), Vietnamese (Native).<br>
-      <strong>Skills:</strong> HTML, CSS, JavaScript, C/C++, GitHub, UI/UX basics.<br>
-      <strong>Achievements:</strong> IELTS 5.0, Typing speed 80 WPM.</p>
-    </div>
-  </section>
-
-  <section id="projects">
-    <div class="card white-box">
-      <p>Hiện tại chưa có dự án nào, đang trong quá trình phát triển cá nhân.</p>
-    </div>
-  </section>
-
-  <section id="contact">
-    <div class="card white-box">
-      <p>Bạn có thể liên hệ tôi qua các nền tảng ở trang Intro hoặc email: <a href="mailto:lequanghoang1001@gmail.com">lequanghoang1001@gmail.com</a></p>
-    </div>
-  </section>
-
-  <section id="blog">
-    <div class="card white-box blog-scroll">
-      <h2>Blog</h2>
-      p>Xin chào, tôi là Lê Quang Hoàng – Chàng Ma Kết sống hết mình</p>
+      <div class="intro" id="contact">
+        <h1>Hello</h1>
+        <p>I'm a Capricorn — ambitious, disciplined, and goal-oriented...</p>
+        <div id="resumeInfo">
+          <strong>Full Name:</strong> Le Quang Hoang<br>
+          <strong>Birthday:</strong> 10/01/2001<br>
+          <strong>University:</strong> Hoa Sen University - Software Engineering<br>
+          <strong>Hobbies:</strong> Cheerleading, Fashion, Web Programming, Café hopping with friends<br><br>
+          <strong>Objective:</strong> To obtain a position as a web developer...<br>
+          <strong>Education:</strong> Bachelor of Software Engineering, Hoa Sen University.<br>
+          <strong>Languages:</strong> English (Intermediate), Vietnamese (Native).<br>
+          <strong>Skills:</strong> HTML, CSS, JavaScript, C/C++, GitHub, UI/UX basics.<br>
+          <strong>Achievements:</strong> IELTS 5.0, Typing speed 80 WPM.
+        </div>
+      </div>
+      <div class="blog" id="blog">
+        <h2>Blog</h2>
+        <p>Xin chào, tôi là Lê Quang Hoàng – Chàng Ma Kết sống hết mình</p>
         <p>Chào bạn, cảm ơn vì đã ghé thăm góc nhỏ của tôi trên internet. Tôi là Lê Quang Hoàng, một chàng trai Ma Kết sinh ngày 10/01/2001, mang trong mình tinh thần thẳng thắn, yêu chất lượng hơn số lượng và luôn tìm kiếm niềm vui trong những điều giản dị nhất.</p>
         <p><strong>Một chút về tôi và những điều tôi yêu thích</strong><br>Tôi là một người yêu tự do, thích tận hưởng cuộc sống theo cách của riêng mình. Những buổi chiều một mình ngồi cà phê, tai đeo headphone với playlist nhạc yêu thích, hay đi dạo phố phường ngắm nhìn dòng người qua lại luôn làm tôi cảm thấy yên bình. Nhưng tôi cũng rất hưởng thụ những khoảnh khắc tụ tập đánh bida, xem phim hay đi cà phê cùng hội bạn thân. Một điều thú vị về tôi: tôi ghét đồ ngọt. Đừng mời tôi ăn bánh kem, nhưng cứ đưa tôi một ly cà phê đen đá là tôi hài lòng ngay.</p>
         <p><strong>Đam mê lớn nhất của tôi là tập thể thao</strong>, đặc biệt là bộ môn Cheerleading. Cảm giác được nhảy, biểu diễn và truyền năng lượng tích cực đến mọi người thật sự khiến tôi sống đúng với chính mình. Tôi cũng yêu thích chơi game – những giờ phút chiến đấu trong thế giới ảo là cách để tôi xả stress hiệu quả.</p>
@@ -75,6 +205,58 @@
         <p>Một bài học lớn mà tôi rút ra từ hành trình của mình là: hãy chấp nhận những điều không hoàn hảo. Là một Ma Kết, tôi từng ám ảnh về sự hoàn hảo, nhưng dần dần, tôi học được cách buông bỏ áp lực và tận hưởng hành trình. Cuộc sống không phải lúc nào cũng suôn sẻ, nhưng chính những thử thách đã làm tôi mạnh mẽ hơn.</p>
         <p><strong>Lời kết</strong><br>Cảm ơn bạn đã dành thời gian để tìm hiểu về tôi qua bài blog này. Nếu bạn cũng yêu thích nhảy, chơi game, hay muốn chia sẻ một câu chuyện thú vị, hãy để lại một bình luận nhé. Hãy sống hết mình, yêu thương thật nhiều, và đừng quên rằng mỗi ngày đều là một cơ hội để tạo nên những khoảnh khắc đáng nhớ.</p>
       </div>
-  </section>
+    </div>
+  </div>
+   <script>
+    const intro = document.querySelector('.intro');
+    const toggleIntro = document.getElementById('toggleIntro');
+    const card = document.getElementById('profileCard');
+    const blog = document.getElementById('blog');
+    const toggleBlog = document.getElementById('toggleBlog');
+
+    let introVisible = false;
+    let blogVisible = false;
+
+    toggleIntro.addEventListener('click', () => {
+      introVisible = !introVisible;
+      intro.classList.toggle('show', introVisible);
+      card.classList.toggle('move-left', introVisible);
+      if (introVisible) {
+        blog.classList.remove('show');
+        blogVisible = false;
+      }
+    });
+
+    toggleBlog.addEventListener('click', () => {
+      blogVisible = !blogVisible;
+      blog.classList.toggle('show', blogVisible);
+      card.classList.toggle('move-left', blogVisible);
+      if (blogVisible) {
+        intro.classList.remove('show');
+        introVisible = false;
+      }
+    });
+
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('show');
+        }
+      });
+    }, {
+      threshold: 0.1
+    });
+
+    document.querySelectorAll('.intro, .blog').forEach(section => {
+      observer.observe(section);
+      
+    });
+    window.addEventListener('DOMContentLoaded', () => {
+  intro.classList.remove('show');
+  blog.classList.remove('show');
+});
+  </script>
+</body>
+</html>
 </body>
 </html>
